[gd_scene load_steps=15 format=3 uid="uid://bt8i58p4qooyi"]

[ext_resource type="Script" uid="uid://daxbb2fye4e50" path="res://addons/GViNT/Editor/main_panel.gd" id="1_di22a"]
[ext_resource type="Script" uid="uid://bqfpcvwwekf6c" path="res://addons/GViNT/Editor/FileList/file_manager.gd" id="2_61lgr"]
[ext_resource type="Script" uid="uid://p7fy2615tlrq" path="res://addons/GViNT/Editor/FileList/save_changes_dialog.gd" id="3_c3q25"]
[ext_resource type="Script" uid="uid://ba1myqylil0sc" path="res://addons/GViNT/Editor/FileList/save_as_and_close_file_dialog.gd" id="4_r8mmm"]
[ext_resource type="Script" uid="uid://ciiow2igqddv5" path="res://addons/GViNT/Editor/hotkey_manager.gd" id="5_4jvre"]
[ext_resource type="Script" uid="uid://ffuojyalwst4" path="res://addons/GViNT/Editor/Toolbar/toolbar.gd" id="6_daxea"]
[ext_resource type="Script" uid="uid://c5g7ubk86c2et" path="res://addons/GViNT/Editor/Toolbar/file_menu_button.gd" id="7_c3q25"]
[ext_resource type="Script" uid="uid://c3wjgextgbwx" path="res://addons/GViNT/Editor/FileList/file_list.gd" id="7_p45me"]
[ext_resource type="Script" uid="uid://qxmd2fpi82re" path="res://addons/GViNT/Editor/FileList/file_context_menu.gd" id="8_j2jq6"]
[ext_resource type="Script" uid="uid://d0xcp3drjia70" path="res://addons/GViNT/Editor/Toolbar/search_menu_button.gd" id="8_r8mmm"]
[ext_resource type="Script" uid="uid://cwhiy0slokmdt" path="res://addons/GViNT/Editor/Toolbar/view_menu_button.gd" id="9_4jvre"]
[ext_resource type="Script" uid="uid://d1hbeqlnady0n" path="res://addons/GViNT/Editor/ScriptEditor/script_editor.gd" id="9_vc3us"]
[ext_resource type="Script" uid="uid://q4pmhqx85nox" path="res://addons/GViNT/Editor/ScriptEditor/search_menu.gd" id="10_61lgr"]
[ext_resource type="Script" uid="uid://dqglci3kmxuxy" path="res://addons/GViNT/Editor/ScriptEditor/status_bar.gd" id="10_lxqt3"]

[node name="MainPanel" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
script = ExtResource("1_di22a")

[node name="FileManager" type="Node" parent="."]
script = ExtResource("2_61lgr")

[node name="SaveChangesDialog" type="AcceptDialog" parent="FileManager"]
initial_position = 4
size = Vector2i(372, 100)
ok_button_text = "Cancel"
dialog_text = "Current file has unsaved changes."
script = ExtResource("3_c3q25")

[node name="SaveAsFileDialog" type="FileDialog" parent="FileManager"]
title = "Save file as..."
initial_position = 4
filters = PackedStringArray("*.gvint;GViNT script;text/plain")

[node name="SaveAsAndCloseFileDialog" type="FileDialog" parent="FileManager"]
auto_translate_mode = 1
title = "Save file as..."
initial_position = 4
filters = PackedStringArray("*.gvint;GViNT script;text/plain")
script = ExtResource("4_r8mmm")

[node name="OpenFileDialog" type="FileDialog" parent="FileManager"]
title = "Open a File"
initial_position = 4
ok_button_text = "Open"
file_mode = 0
filters = PackedStringArray("*.gvint;GViNT script;text/plain")

[node name="HotkeyManager" type="Control" parent="."]
layout_mode = 2
script = ExtResource("5_4jvre")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Toolbar" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
script = ExtResource("6_daxea")

[node name="FileMenuButton" type="MenuButton" parent="VBoxContainer/Toolbar"]
layout_mode = 2
text = "File"
switch_on_hover = true
script = ExtResource("7_c3q25")

[node name="SearchMenuButton" type="MenuButton" parent="VBoxContainer/Toolbar"]
layout_mode = 2
text = "Search"
switch_on_hover = true
script = ExtResource("8_r8mmm")

[node name="ViewMenuButton" type="MenuButton" parent="VBoxContainer/Toolbar"]
layout_mode = 2
text = "View"
switch_on_hover = true
script = ExtResource("9_4jvre")

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
split_offset = 300
drag_area_margin_begin = 200

[node name="FileList" type="ItemList" parent="VBoxContainer/HSplitContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
allow_search = false
script = ExtResource("7_p45me")

[node name="FileContextMenu" type="PopupMenu" parent="VBoxContainer/HSplitContainer/FileList"]
size = Vector2i(20, 2)
script = ExtResource("8_j2jq6")

[node name="ScriptEditor" type="VBoxContainer" parent="VBoxContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("9_vc3us")

[node name="NoFileCodeEdit" type="CodeEdit" parent="VBoxContainer/HSplitContainer/ScriptEditor"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Create or open a file to edit..."
editable = false
gutters_draw_line_numbers = true
auto_brace_completion_enabled = true
auto_brace_completion_highlight_matching = true

[node name="SearchMenu" type="PanelContainer" parent="VBoxContainer/HSplitContainer/ScriptEditor"]
visible = false
layout_mode = 2
script = ExtResource("10_61lgr")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HSplitContainer/ScriptEditor/SearchMenu"]
layout_mode = 2

[node name="SearchControls" type="HBoxContainer" parent="VBoxContainer/HSplitContainer/ScriptEditor/SearchMenu/VBoxContainer"]
layout_mode = 2

[node name="SearchTextEdit" type="LineEdit" parent="VBoxContainer/HSplitContainer/ScriptEditor/SearchMenu/VBoxContainer/SearchControls"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
focus_next = NodePath("../../ReplaceControls/ReplaceTextEdit")
placeholder_text = "Search text"
keep_editing_on_text_submit = true

[node name="SearchPreviousButton" type="Button" parent="VBoxContainer/HSplitContainer/ScriptEditor/SearchMenu/VBoxContainer/SearchControls"]
layout_mode = 2
text = "↑"

[node name="SearchNextButton" type="Button" parent="VBoxContainer/HSplitContainer/ScriptEditor/SearchMenu/VBoxContainer/SearchControls"]
layout_mode = 2
text = "↓"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HSplitContainer/ScriptEditor/SearchMenu/VBoxContainer/SearchControls"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="MatchCaseCheckBox" type="CheckBox" parent="VBoxContainer/HSplitContainer/ScriptEditor/SearchMenu/VBoxContainer/SearchControls/HBoxContainer"]
layout_mode = 2

[node name="MatchCaseLabel" type="Label" parent="VBoxContainer/HSplitContainer/ScriptEditor/SearchMenu/VBoxContainer/SearchControls/HBoxContainer"]
layout_mode = 2
text = "Match case  "

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/HSplitContainer/ScriptEditor/SearchMenu/VBoxContainer/SearchControls"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="WholeWordCheckBox" type="CheckBox" parent="VBoxContainer/HSplitContainer/ScriptEditor/SearchMenu/VBoxContainer/SearchControls/HBoxContainer2"]
layout_mode = 2

[node name="WholeWordLabel" type="Label" parent="VBoxContainer/HSplitContainer/ScriptEditor/SearchMenu/VBoxContainer/SearchControls/HBoxContainer2"]
layout_mode = 2
text = "Whole word"

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/HSplitContainer/ScriptEditor/SearchMenu/VBoxContainer/SearchControls"]
layout_mode = 2

[node name="StatusLabel" type="Label" parent="VBoxContainer/HSplitContainer/ScriptEditor/SearchMenu/VBoxContainer/SearchControls"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_stretch_ratio = 0.0
text = "0/0"

[node name="VSeparator2" type="VSeparator" parent="VBoxContainer/HSplitContainer/ScriptEditor/SearchMenu/VBoxContainer/SearchControls"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="VBoxContainer/HSplitContainer/ScriptEditor/SearchMenu/VBoxContainer/SearchControls"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_stretch_ratio = 0.0
text = " x "

[node name="ReplaceControls" type="HBoxContainer" parent="VBoxContainer/HSplitContainer/ScriptEditor/SearchMenu/VBoxContainer"]
layout_mode = 2

[node name="ReplaceTextEdit" type="LineEdit" parent="VBoxContainer/HSplitContainer/ScriptEditor/SearchMenu/VBoxContainer/ReplaceControls"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
focus_next = NodePath("../../SearchControls/SearchPreviousButton")
focus_previous = NodePath("../../SearchControls/SearchTextEdit")
placeholder_text = "Replace with"
keep_editing_on_text_submit = true

[node name="ReplaceButton" type="Button" parent="VBoxContainer/HSplitContainer/ScriptEditor/SearchMenu/VBoxContainer/ReplaceControls"]
layout_mode = 2
text = "Replace"

[node name="ReplaceAllButton" type="Button" parent="VBoxContainer/HSplitContainer/ScriptEditor/SearchMenu/VBoxContainer/ReplaceControls"]
layout_mode = 2
text = "Replace all
"

[node name="StatusBar" type="HBoxContainer" parent="VBoxContainer/HSplitContainer/ScriptEditor"]
layout_mode = 2
script = ExtResource("10_lxqt3")

[node name="FilePathLabel" type="Label" parent="VBoxContainer/HSplitContainer/ScriptEditor/StatusBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "<No file open>"

[node name="VSeparator2" type="VSeparator" parent="VBoxContainer/HSplitContainer/ScriptEditor/StatusBar"]
layout_mode = 2

[node name="StatusLabel" type="Label" parent="VBoxContainer/HSplitContainer/ScriptEditor/StatusBar"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Parser idle"

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/HSplitContainer/ScriptEditor/StatusBar"]
layout_mode = 2

[node name="CaretLabel" type="Label" parent="VBoxContainer/HSplitContainer/ScriptEditor/StatusBar"]
layout_mode = 2
tooltip_text = "Line: Column"
mouse_filter = 0
text = "0: 0"
horizontal_alignment = 2

[connection signal="all_files_closed" from="FileManager" to="HotkeyManager" method="_on_file_manager_all_files_closed"]
[connection signal="current_file_changed" from="FileManager" to="VBoxContainer/HSplitContainer/FileList" method="_on_file_manager_current_file_changed"]
[connection signal="current_file_changed" from="FileManager" to="VBoxContainer/HSplitContainer/ScriptEditor" method="_on_file_manager_current_file_changed"]
[connection signal="file_index_closed" from="FileManager" to="VBoxContainer/HSplitContainer/FileList" method="_on_file_manager_file_index_closed"]
[connection signal="file_index_moved" from="FileManager" to="VBoxContainer/HSplitContainer/FileList" method="_on_file_manager_file_index_moved"]
[connection signal="file_opened" from="FileManager" to="HotkeyManager" method="_on_file_manager_file_opened"]
[connection signal="file_opened" from="FileManager" to="VBoxContainer/HSplitContainer/FileList" method="_on_file_manager_file_opened"]
[connection signal="file_opened" from="FileManager" to="VBoxContainer/HSplitContainer/ScriptEditor" method="_on_file_manager_file_opened"]
[connection signal="custom_action" from="FileManager/SaveChangesDialog" to="FileManager/SaveChangesDialog" method="_on_custom_action"]
[connection signal="force_close_requested" from="FileManager/SaveChangesDialog" to="FileManager" method="close_current_file_without_saving"]
[connection signal="save_and_close_requested" from="FileManager/SaveChangesDialog" to="FileManager" method="save_and_close_current_file"]
[connection signal="file_selected" from="FileManager/SaveAsFileDialog" to="FileManager" method="save_current_file_as"]
[connection signal="file_selected" from="FileManager/SaveAsAndCloseFileDialog" to="FileManager/SaveAsAndCloseFileDialog" method="_on_file_selected"]
[connection signal="visibility_changed" from="FileManager/SaveAsAndCloseFileDialog" to="FileManager/SaveAsAndCloseFileDialog" method="_on_visibility_changed"]
[connection signal="file_selected" from="FileManager/OpenFileDialog" to="FileManager" method="open_file_and_set_current"]
[connection signal="close_file_requested" from="HotkeyManager" to="FileManager" method="prompt_save_or_close_current_file"]
[connection signal="move_down_requested" from="HotkeyManager" to="FileManager" method="move_current_file_down"]
[connection signal="move_up_requested" from="HotkeyManager" to="FileManager" method="move_current_file_up"]
[connection signal="new_file_requested" from="HotkeyManager" to="FileManager" method="create_new_file_and_set_current"]
[connection signal="open_file_requested" from="HotkeyManager" to="FileManager/OpenFileDialog" method="show"]
[connection signal="save_as_requested" from="HotkeyManager" to="FileManager/SaveAsFileDialog" method="show"]
[connection signal="save_requested" from="HotkeyManager" to="FileManager" method="save_current_file"]
[connection signal="search_and_replace_requested" from="HotkeyManager" to="VBoxContainer/HSplitContainer/ScriptEditor/SearchMenu" method="show_search_and_replace_controls"]
[connection signal="search_requested" from="HotkeyManager" to="VBoxContainer/HSplitContainer/ScriptEditor/SearchMenu" method="show_search_controls"]
[connection signal="toggle_file_list_requested" from="HotkeyManager" to="VBoxContainer/Toolbar/ViewMenuButton" method="_on_hotkey_manager_toggle_file_list_requested"]
[connection signal="toggle_file_list_requested" from="HotkeyManager" to="VBoxContainer/HSplitContainer/FileList" method="toggle_visible"]
[connection signal="new_file_requested" from="VBoxContainer/Toolbar/FileMenuButton" to="FileManager" method="create_new_file_and_set_current"]
[connection signal="open_file_requested" from="VBoxContainer/Toolbar/FileMenuButton" to="FileManager/OpenFileDialog" method="show"]
[connection signal="save_fie_requested" from="VBoxContainer/Toolbar/FileMenuButton" to="FileManager" method="save_current_file"]
[connection signal="save_file_as_requested" from="VBoxContainer/Toolbar/FileMenuButton" to="FileManager/SaveAsFileDialog" method="show"]
[connection signal="search_and_replace_requested" from="VBoxContainer/Toolbar/SearchMenuButton" to="VBoxContainer/HSplitContainer/ScriptEditor/SearchMenu" method="show_search_and_replace_controls"]
[connection signal="search_requested" from="VBoxContainer/Toolbar/SearchMenuButton" to="VBoxContainer/HSplitContainer/ScriptEditor/SearchMenu" method="show_search_controls"]
[connection signal="file_list_toggled" from="VBoxContainer/Toolbar/ViewMenuButton" to="VBoxContainer/HSplitContainer/FileList" method="toggle_visible"]
[connection signal="line_wrap_changed" from="VBoxContainer/Toolbar/ViewMenuButton" to="VBoxContainer/HSplitContainer/ScriptEditor" method="set_wrap_lines"]
[connection signal="show_line_numbers_changed" from="VBoxContainer/Toolbar/ViewMenuButton" to="VBoxContainer/HSplitContainer/ScriptEditor" method="set_show_line_numbers"]
[connection signal="item_clicked" from="VBoxContainer/HSplitContainer/FileList" to="VBoxContainer/HSplitContainer/FileList" method="_on_item_clicked"]
[connection signal="item_selected" from="VBoxContainer/HSplitContainer/FileList" to="FileManager" method="set_file_at_index_as_selected"]
[connection signal="move_current_file_requested" from="VBoxContainer/HSplitContainer/FileList" to="FileManager" method="move_current_file"]
[connection signal="close_file_requested" from="VBoxContainer/HSplitContainer/FileList/FileContextMenu" to="FileManager" method="prompt_save_or_close_current_file"]
[connection signal="id_pressed" from="VBoxContainer/HSplitContainer/FileList/FileContextMenu" to="VBoxContainer/HSplitContainer/FileList/FileContextMenu" method="_on_id_pressed"]
[connection signal="move_down_requested" from="VBoxContainer/HSplitContainer/FileList/FileContextMenu" to="FileManager" method="move_current_file_down"]
[connection signal="move_up_requested" from="VBoxContainer/HSplitContainer/FileList/FileContextMenu" to="FileManager" method="move_current_file_up"]
[connection signal="save_as_requested" from="VBoxContainer/HSplitContainer/FileList/FileContextMenu" to="FileManager/SaveAsFileDialog" method="show"]
[connection signal="save_requested" from="VBoxContainer/HSplitContainer/FileList/FileContextMenu" to="FileManager" method="save_current_file"]
[connection signal="visibility_changed" from="VBoxContainer/HSplitContainer/ScriptEditor/SearchMenu" to="VBoxContainer/HSplitContainer/ScriptEditor/SearchMenu" method="_on_visibility_changed"]
[connection signal="text_changed" from="VBoxContainer/HSplitContainer/ScriptEditor/SearchMenu/VBoxContainer/SearchControls/SearchTextEdit" to="VBoxContainer/HSplitContainer/ScriptEditor/SearchMenu" method="_on_search_text_edit_text_changed"]
[connection signal="text_submitted" from="VBoxContainer/HSplitContainer/ScriptEditor/SearchMenu/VBoxContainer/SearchControls/SearchTextEdit" to="VBoxContainer/HSplitContainer/ScriptEditor/SearchMenu" method="_on_search_text_edit_text_submitted"]
[connection signal="pressed" from="VBoxContainer/HSplitContainer/ScriptEditor/SearchMenu/VBoxContainer/SearchControls/SearchPreviousButton" to="VBoxContainer/HSplitContainer/ScriptEditor/SearchMenu" method="search_previous"]
[connection signal="pressed" from="VBoxContainer/HSplitContainer/ScriptEditor/SearchMenu/VBoxContainer/SearchControls/SearchNextButton" to="VBoxContainer/HSplitContainer/ScriptEditor/SearchMenu" method="search_next"]
[connection signal="toggled" from="VBoxContainer/HSplitContainer/ScriptEditor/SearchMenu/VBoxContainer/SearchControls/HBoxContainer/MatchCaseCheckBox" to="VBoxContainer/HSplitContainer/ScriptEditor/SearchMenu" method="_on_match_case_check_box_toggled"]
[connection signal="toggled" from="VBoxContainer/HSplitContainer/ScriptEditor/SearchMenu/VBoxContainer/SearchControls/HBoxContainer2/WholeWordCheckBox" to="VBoxContainer/HSplitContainer/ScriptEditor/SearchMenu" method="_on_whole_word_check_box_toggled"]
[connection signal="pressed" from="VBoxContainer/HSplitContainer/ScriptEditor/SearchMenu/VBoxContainer/SearchControls/CloseButton" to="VBoxContainer/HSplitContainer/ScriptEditor/SearchMenu" method="hide"]
[connection signal="text_submitted" from="VBoxContainer/HSplitContainer/ScriptEditor/SearchMenu/VBoxContainer/ReplaceControls/ReplaceTextEdit" to="VBoxContainer/HSplitContainer/ScriptEditor/SearchMenu" method="_on_replace_text_edit_text_submitted"]
[connection signal="pressed" from="VBoxContainer/HSplitContainer/ScriptEditor/SearchMenu/VBoxContainer/ReplaceControls/ReplaceButton" to="VBoxContainer/HSplitContainer/ScriptEditor/SearchMenu" method="replace_occurence"]
[connection signal="pressed" from="VBoxContainer/HSplitContainer/ScriptEditor/SearchMenu/VBoxContainer/ReplaceControls/ReplaceAllButton" to="VBoxContainer/HSplitContainer/ScriptEditor/SearchMenu" method="replace_all_occurences"]
